aws/ops/reports/_lastrun.log
executing-against: 001bbb5e1f61b57484303fa9ad516f12dfda1465
  File "/home/runner/work/si/si/aws/ops/pending/ops_2944_homepage_wiring_audit.py", line 31
    r.ok(f"  LIVE slot {sid}: {m.group(1)!r if m else 'NOT FOUND'}" if m else f"  LIVE slot {sid}: NOT FOUND IN HTML")
                                            ^^
SyntaxError: f-string: expecting ':' or '}'
❌ OPS-FAIL: aws/ops/pending/ops_2944_homepage_wiring_audit.py
